--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-
-.DS_Store
-.DS_Store
-.DS_Store
-.DS_Store
-.DS_Store
-__pycache__
-.DS_Store
-.DS_Store
-static/.DS_Store
+**/__pycache__
+**/.DS_Store
+venv
